# ai-office-mcp

./: .gitignore  README.md
excel/: create_hr_report.py  create_pivot_hr.py  diag_validation.py  pyproject.toml  requirements.txt  test_accounting.py  test_excel_ops.py  test_incremental.py
excel/.snapshots/: 20260505_161000_03c26e.xlsx  20260505_161000_22d139.xlsx  20260505_161000_38ef8e.xlsx  20260505_161000_48672b.xlsx  20260505_161000_547694.xlsx  20260505_161000_65811d.xlsx  20260505_161000_78fcc1.xlsx  20260505_161000_96fbe2.xlsx  20260505_161000_bea4d3.xlsx  20260505_161000_c7cc3a.xlsx  20260505_162650_c33b63.xlsx  20260505_162651_0f3f7f.xlsx  20260505_162651_1f3292.xlsx  20260505_162651_265a7a.xlsx  20260505_162651_35986d.xlsx  20260505_162651_4d4716.xlsx  20260505_162651_4fe4b2.xlsx  20260505_162651_5031eb.xlsx  20260505_162651_51bc6d.xlsx  20260505_162651_603e06.xlsx  20260505_162651_62a27c.xlsx  20260505_162651_7a788a.xlsx  20260505_162651_7beef7.xlsx  20260505_162651_7ec55a.xlsx  20260505_162651_882c7e.xlsx  20260505_162651_932928.xlsx  20260505_162651_9c76f8.xlsx  20260505_162651_a36995.xlsx  20260505_162651_a93ed2.xlsx  20260505_162651_b14819.xlsx  20260505_162651_b26cf8.xlsx  20260505_162651_c15719.xlsx  20260505_162651_c3a697.xlsx  20260505_162651_d4c175.xlsx  20260505_162651_e7c824.xlsx  20260505_162651_fb18ac.xlsx  20260505_162651_ffac09.xlsx  20260505_162652_03acb8.xlsx  20260505_162652_0d1db9.xlsx  20260505_162652_1de85f.xlsx  (+395 more)
excel/excel_mcp/: __init__.py  main.py
excel/excel_mcp/core/: constants.py  excel_com.py  openpyxl_backend.py
(+79 files in other folders)
